--- a/inventory/group_vars/kvm_hv/debian.yml
+++ b/inventory/group_vars/kvm_hv/debian.yml
@@ -12,7 +12,7 @@ __group_deb_packages:
   - netcat-openbsd
   - openssl
   - p7zip-full
-  - postgresql-client
+  - "postgresql-client-{{ hostvars['pg01'].postgresql_version }}"
   - python3-venv
   - shellcheck
   - ssh
