--- a/inventory/host_vars/theia/nfs.yml
+++ b/inventory/host_vars/theia/nfs.yml
@@ -16,11 +16,45 @@ nfs_shares:
   - path: /mnt/tank
     options: "rw,no_root_squash,no_subtree_check"
     sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/archive
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/backup
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/borg
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/downloads
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/games
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/media
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/media/motion
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/media/photo
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  - path: /mnt/tank/yes
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+  # Misc
   - path: /mnt/tank/media/motion
     options: "rw,no_root_squash,no_subtree_check"
     sources: "{{ [hostvars['drepi'].ansible_host] }}"
   # Kubernetes shares
   - path: /mnt/tank/media
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ subnets.san.talos }}"
+  - path: /mnt/tank/media/motion
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ subnets.san.talos }}"
+  - path: /mnt/tank/media/photo
     options: "rw,no_root_squash,no_subtree_check"
     sources: "{{ subnets.san.talos }}"
   - path: /mnt/tank/yes
