--- a/inventory/host_vars/desktop/chezmoi.yml
+++ b/inventory/host_vars/desktop/chezmoi.yml
@@ -7,11 +7,10 @@ chezmoi_overrides:
   gui: |
     START_CMD=startx
     export GTK_USE_PORTAL=1
-    export STEAM_FORCE_DESKTOPUI_SCALING=1.25
   i3: |
     WS["2"]="no-discord"
   polybar: |
-    DPI_MAP["DP-0"]="144"
+    DPI_MAP["HDMI-0"]="144"
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="1"
     MOUSE_SENS="-0.65"
@@ -21,18 +20,19 @@ chezmoi_overrides:
     USE_AUTORANDR=0
 
     export __GL_SYNC_TO_VBLANK=1
-    export __GL_SYNC_DISPLAY_DEVICE=DP-2
-    export VDPAU_NVIDIA_SYNC_DISPLAY_DEVICE=DP-2
+    export __GL_SYNC_DISPLAY_DEVICE=DP-0
+    export VDPAU_NVIDIA_SYNC_DISPLAY_DEVICE=DP-0
+    export STEAM_FORCE_DESKTOPUI_SCALING=1.25
   lock: |
-    idle_hook=xidlehook_lock
+    idle_hook=xidlehook_lock_oled
     WAYLAND_LOCKER=swaylock_screenshot
   xorg: |
     DPI=120
-    MONITOR_MAP["DP-2"]="--primary --mode 3840x2160 --rate 144"
-    MONITOR_MAP["HDMI-0"]="--mode 3840x2160 --rate 60 --above DP-2"
+    MONITOR_MAP["DP-0"]="--primary --mode 3840x2160 --rate 240"
+    MONITOR_MAP["HDMI-0"]="--mode 3840x2160 --rate 60 --above DP-0"
   waybar.yaml: |
     monitor_map:
       desktop_main:
-        - "GIGA-BYTE TECHNOLOGY CO., LTD. Gigabyte M32U 21311B001327"
+        - "Microstep MPG321UX OLED 0x01010101"
       desktop_secondary:
         - "Samsung Electric Company U24E850 HTHH300363"
