--- a/inventory/group_vars/localgw/dns.yml
+++ b/inventory/group_vars/localgw/dns.yml
@@ -42,3 +42,11 @@ __mt_dns_entries_once:
     cname: "{{ localgw_dns_name }}"
     ttl: 5m
     type: CNAME
+  - name: "{{ s3_domain }}"
+    cname: "{{ localgw_dns_name }}"
+    ttl: 5m
+    type: CNAME
+  - name: "{{ minio_domain }}"
+    cname: "{{ localgw_dns_name }}"
+    ttl: 5m
+    type: CNAME
