--- a/inventory/host_vars/desktop/chezmoi.yml
+++ b/inventory/host_vars/desktop/chezmoi.yml
@@ -10,7 +10,7 @@ chezmoi_overrides:
   i3: |
     WS["2"]="no-discord"
   polybar: |
-    DPI_MAP["HDMI-0"]="144"
+    DPI_MAP["DP-4"]="144"
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="1"
     MOUSE_SENS="-0.65"
@@ -27,7 +27,7 @@ chezmoi_overrides:
   xorg: |
     DPI=120
     MONITOR_MAP["DP-0"]="--primary --mode 3840x2160 --rate 240"
-    MONITOR_MAP["HDMI-0"]="--mode 3840x2160 --rate 60 --above DP-0"
+    MONITOR_MAP["DP-4"]="--mode 3840x2160 --rate 60 --above DP-0"
   waybar.yaml: |
     monitor_map:
       desktop_main:
