--- a/inventory/group_vars/talos/libvirt.yml
+++ b/inventory/group_vars/talos/libvirt.yml
@@ -2,7 +2,7 @@
 
 # TODO: Give more resources once Theia is freed up a bit.
 vm_cpus: "{{ (vm_host in groups['ms01']) | ternary(12, 6) }}"
-vm_mem: "{{ (vm_host in groups['ms01']) | ternary(12288, 8192) }}"
+vm_mem: 12288
 vm_host: "{{ vm_host_list[groups['talos'] | ansible.utils.index_of('eq', inventory_hostname) % (vm_host_list | length)] }}"
 vm_template: false
 vm_customize: false
