--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -108,6 +108,8 @@ subnets:
       - 10.0.10.64/28
     pg:
       - 10.0.10.84/30
+    gitea:
+      - 10.0.10.88/31
     gitlab:
       - 10.0.10.90/31
     gitrun:
