--- a/requirements.yml
+++ b/requirements.yml
@@ -33,3 +33,8 @@ roles:
     src: https://github.com/cosandr/ansible-role-nextcloud.git
     scm: git
     version: v1.6.0
+
+  - name: elastic.elasticsearch
+    src: https://github.com/bdeetz/ansible-elasticsearch
+    scm: git
+    version: v7.17.3
