--- a/inventory/group_vars/pg/db.yml
+++ b/inventory/group_vars/pg/db.yml
@@ -10,6 +10,9 @@ postgresql_databases:
   - name: discord_public
     owner: postgres
 
+  - name: gitea
+    owner: gitea
+
   - name: grafana
     owner: grafana
 
