Remove longhorn, Talos 1.9.6
Partially reverts c0026cd4a8c8665972ec829d3b786ce37625d5c8

--- a/inventory/group_vars/talos/libvirt.yml
+++ b/inventory/group_vars/talos/libvirt.yml
@@ -42,11 +42,10 @@ vm_extra_disks:
       discard: "unmap"
       cache: "none"
 
-  # Used by Longhorn
+  # Used by Rook
   - type: block
     device: disk
     format: raw
-    # Preferrably partition it before.
     dev: "/dev/mapper/talosdata01"
     serial: "talosdata01"
     target: "vdc"
