Add nginx restart hook to pg_cert on localgw
This has somehow been missing for all this time.

--- a/inventory/group_vars/localgw/pg_cert.yml
+++ b/inventory/group_vars/localgw/pg_cert.yml
@@ -13,6 +13,13 @@ pg_cert_pull_pre_script: |
     exit 0
   fi
 
+pg_cert_pull_hooks:
+  - name: restart-nginx
+    content: |
+      #!/bin/sh
+
+      systemctl restart nginx
+
 pg_cert_pull: >-
   {%- set tmp = [] -%}
   {%- for k in lego_domain_keys -%}
